--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,17 @@
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.13",
+    "expo-av": "^13.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
+    "react-navigation-collapsible": "^6.3.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
