--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,14 @@
     "@gluestack-style/react": "^1.0.8",
     "@gluestack-ui/config": "^1.0.3",
     "@gluestack-ui/themed": "^1.0.8",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
+    "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
+    "expo-dev-client": "~2.4.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
