--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
+    "axios": "^1.6.0",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
     "expo-dev-client": "~2.4.11",
