--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,20 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@firebase/app": "^0.9.22",
+    "@firebase/storage": "^0.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb-memory-server": "^9.0.1",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
