--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,24 +19,34 @@
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "axios": "^1.6.0",
+    "base-64": "^1.0.0",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
     "expo-dev-client": "~2.4.11",
+    "expo-file-system": "~15.4.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-audio-record": "^0.2.2",
+    "react-native-audio-recorder-player": "^3.6.4",
+    "react-native-audio-toolkit": "^1.0.6",
     "react-native-axios": "^0.17.1",
+    "react-native-blob-util": "^0.19.2",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-track-player": "^4.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation-collapsible": "^6.3.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
