--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
+    "agora-react-native-rtm": "^1.5.1",
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
     "expo": "~49.0.13",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-agora": "^4.2.5",
     "react-native-audio-record": "^0.2.2",
     "react-native-audio-recorder-player": "^3.6.4",
     "react-native-audio-toolkit": "^1.0.6",
