--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,12 @@
   "type": "module",
   "dependencies": {
     "@firebase/app": "^0.9.22",
+    "@firebase/auth": "^1.4.0",
     "@firebase/storage": "^0.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.11.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
